Fix cart item buttons stretching - Push price to the bottom

--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -1,7 +1,7 @@
 .cart-item-container{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 4fr 1fr 1fr;
+    grid-template-rows: repeat(3, min-content);
     place-items: stretch;
     place-content: stretch;
     gap: 1rem;
@@ -28,4 +28,5 @@
     font-size: 1.5rem;
     display: flex;
     gap: 1rem;
+    margin: auto 0 0 0;
 }
